fixed home-page searchbar alignment and sorted some scss properties

--- a/src/assets/styles/pages/_home-page.scss
+++ b/src/assets/styles/pages/_home-page.scss
@@ -32,11 +32,11 @@
         width: 650px;
     }
     & .home-page-search-bar-container {
+        margin-top: 20px;
         & .home-page-search-bar {
             border: transparent;
-            font-size: 16px;
             height: 48px;
-            margin-top: 20px;
+            font-size: 16px;
             padding-left: 44px;
             margin-bottom: 0;
             border-radius: 4px 0 0 4px;
@@ -52,6 +52,7 @@
             font-weight: 700;
             width: 103px;
             height: 48px;
+            padding-block-start: 3px;
         }
     }
     & .home-page-tag-buttons {
